# rtos-deliverables

./: README.md
assignments/1/: libc_malloc_times.csv  libc_malloc_times.txt  malloc_times.xlsx  rtos-alloc.c  rtos-alloc.h  rtos_alloc_times.txt
assignments/2/: a.out  mysh.c
assignments/3/: Makefile  assign3.c  assign3.h  example.c  fuse  fuse.c
assignments/4/: README  client.c  server.c
assignments/5/: Makefile  assign5.c  assign5.h  main.c
labs/.svn/: wc.db
labs/lab1/: Makefile  cat_fstab  echo_hello_2  lab_report  main.c  modified_stuff.s  modified_syscalls  prelab  register_read  stuff.s  syscalls  syscalls_strace
labs/lab2/: Makefile  pthreads  report.odt
labs/lab3/: prelab.txt
labs/lab3/3-paging/: CMakeCache.txt  CMakeLists.txt  Makefile  rusage.c
labs/lab3/3-paging/cmdline/: CMakeLists.txt  Makefile
labs/lab3/3-paging/gui/: Makefile  gtk-ui.c
labs/lab3/3-paging/include/: ui.h
labs/lab4/: averages  report
